[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ydb-bench"
version = "0.1.0"
description = "A pgbench-like workload tool for YDB databases"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "YDB Bench Contributors"}
]
keywords = ["ydb", "benchmark", "pgbench", "database", "workload"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ydb[yc]",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=7.0.0",
    "pyproject-flake8>=7.0.0"
]

[project.scripts]
ydb-bench = "ydb_bench.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/ydb-bench"
Repository = "https://github.com/yourusername/ydb-bench"
Issues = "https://github.com/yourusername/ydb-bench/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ydb_bench*"]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120