[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ydb-bench"
version = "0.1.0"
description = "A pgbench-like workload tool for YDB databases"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "YDB Bench Contributors"}
]
keywords = ["ydb", "benchmark", "pgbench", "database", "workload"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ydb[yc]",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pyproject-flake8>=7.0.0"
]

[project.scripts]
ydb-bench = "ydb_bench.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/ydb-bench"
Repository = "https://github.com/yourusername/ydb-bench"
Issues = "https://github.com/yourusername/ydb-bench/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ydb_bench*"]

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
# Note: Set to 3.9 as minimum for mypy compatibility
# Project supports 3.8+ but mypy requires 3.9+
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = false
show_error_codes = true
pretty = true

# Per-module options for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "ydb.*",
    "click.*",
]
ignore_missing_imports = true
